# nandrs

./: Cargo.toml  LICENSE  README.md
alt/: README.md
alt/double/: Cargo.toml
alt/double/src/: computer.rs  main.rs
alt/eight/: Cargo.toml
alt/eight/src/: component.rs  computer.rs  lib.rs  main.rs
assignments/: Cargo.toml
assignments/src/: lib.rs  project_01.rs  project_02.rs  project_03.rs  project_05.rs  project_06.rs
assignments/src/tests/: mod.rs  test_01.rs  test_02.rs  test_03.rs  test_05.rs  test_06.rs  test_wiring.rs
computer/: Cargo.toml  build.rs
computer/src/: cli.rs  disasm.rs  display.rs  keyboard.rs  lib.rs  main.rs
examples/: FastDraw.asm  Pong.asm
simulator/: Cargo.toml
simulator-derive/: Cargo.toml
simulator-derive/src/: lib.rs
simulator/src/: bool.rs  component.rs  declare.rs  device.rs  eval.rs  lib.rs  nat.rs  simulate.rs  word.rs
simulator/src/component/: combine.rs  compute.rs  mod.rs  native.rs  sequence.rs
simulator/src/simulate/: eval.rs  memory.rs  mod.rs  native.rs  synth.rs  wiring.rs
simulator/src/tests/: mod.rs  test_declare.rs  test_simulate.rs
src/: main.rs  project_01.rs
src/tests/: mod.rs  test_01.rs
