[package]
name = "double"
version = "0.1.0"
edition = "2024"

[dependencies]
simulator = { path = "../../simulator" }
assignments = { path = "../../assignments" }
computer = { path = "../../computer" }
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
assignments = { path = "../../assignments", features = ["test-support"] }
